kube/kustomize/overlays/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: i046364-eks-hello
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: bootstrap-kickstart-6x.optz.awmae.dev.aws.jpmchase.net
      http:
        paths:
          - path: /api/harness
            pathType: Prefix
            backend:
              service:
                name: i046364-eks-hello
                port:
                  number: 443
  tls:
    - hosts:
        - bootstrap-kickstart-6x.optz.awmae.dev.aws.jpmchase.net
